Sent files back to browser extension

--- a/HTML Templates/finalTesting.html
+++ b/HTML Templates/finalTesting.html
@@ -69,6 +69,18 @@
         </div>
     </div>
 
+    <p style="text-align:justify;">
+        You can’t. You need other words, like pronouns, to be the object of the sentence. If you say “fuck,” for example, you need “him” or “you” or “it” to tell us whom, or what, should be metaphorically fucked. You can issue the command “Fuck shit up,” but you still need “up” as the adverbial particle. In Glaswegian Scots, “fook” is a place you can “get tae” (the complete sentence, “Get tae fook,” means “Please depart immediately, or possible harm to your person may ensue”). But you still need those other little words in the sentence.
+        Of course, if you are Samuel L. Jackson, “motherfucker” is a complete sentence. The Star Wars prequels become 300% more bearable if you add that fine word to the end of his dialogue:
+        “This party’s over, motherfucker.” (Episode II, to Count Dooku)
+        “I don’t think so, motherfucker.” (same scene)
+        “You’re under arrest, motherfucker.” (Episode III, to Chancellor Palpatine)
+        <br><br>
+        You are a retard. I hate you. I hate the fact you exist. You are scum. You are an absolute fucking douchebag. You are a lowlife piece of human garbage. You absolute fucking retard cunt. You are a waste of a human being. You've done ABSOLUTELY NOTHING that's important. You dumb cunt, you piece of shit. You're not even a son of a bitch, that's too dignified a term for what you are. You know, you're not even human. You don't deserve the word human because you are that much of a fucking disgrace to people all around the globe, worldwide. It's a dishonor to put you in the same sentence with that word, you asshole. Are you fucking proud of yourself? Are you proud of having accomplished absolutely nothing in your life? You have only done bad things in this world. You do not deserve to live, you shit. You are a terrible excuse for a human being. You are an ABSOLUTE cunt. You are nothing but a faggot brainlet. You sleazy two-faced bastard. You slimy sluggish asshole. You TRIFLING motherfucker.
+        <br><br>
+        Mother fucking cock sucking slut whore cunt with dick tow ball bitch sperm burping chicklen fucking cum guzzling dollar scank pedophile dog shit tasting rabbit fucking cross dressing homophobic sucubus shit licking corn picking shit sampler with dog shit breath cause you blew the dog that ass raped you while you were picking corn off of shit in the toilet to make corn fritters with,and eating it fresh out of the bowl.Thats just a mild one,they get way better..
+    </p>
+
     <hr>
 
     <div class="container">
