--- a/HTML Templates/checking.html
+++ b/HTML Templates/checking.html
@@ -3,7 +3,7 @@
   <body>
     <h1>My First Heading</h1>
     <p>My first paragraph</p>
-    <div><div><div>Fuck you</div></div></div>
+    <div><div><div><p class = "hello">Fuck you</p></div></div></div>
     <div>Fuck two</div>
   </body>
 </html>
