--- a/HTML Templates/checking.html
+++ b/HTML Templates/checking.html
@@ -4,6 +4,6 @@
     <h1>My First Heading</h1>
     <p>My first paragraph</p>
     <div><div><div><p class = "hello">Fuck you</p></div></div></div>
-    <div>Fuck two</div>
+    <div>Fucking bastard</div>
   </body>
 </html>
