--- a/HTML Templates/checking.html
+++ b/HTML Templates/checking.html
@@ -4,6 +4,12 @@
     <h1>My First Heading</h1>
     <p>My first paragraph</p>
     <div><div><div><p class = "hello">Fuck you</p></div></div></div>
-    <div>Fucking bastard</div>
+
+    <div>I will kill you </div>
+
+    <div> <i> Ah shit man, here we go again</i></div>
+    <div> <p> <div style ="text-align: center; color: blueviolet;"> Hi how are you? </div> </p></div>
+    <div> <div>You are a moron</div> </div>
+
   </body>
 </html>
