changed entire regex

--- a/HTML Templates/finalTesting.html
+++ b/HTML Templates/finalTesting.html
@@ -22,6 +22,7 @@
     </style>
 </head>
 <body>
+    <div>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top"> 
         <div class="container">
             <a class="navbar-brand" href="#">Censor Tester</a>
@@ -37,7 +38,9 @@
             </div>
         </div>
     </nav>
+    </div>
 
+    <div>
     <section class="bg-dark text-light mb-2 p-lg-0 pt-lg-5 text-center text-sm-start">
         <div class="container">
             <div class="d-sm-flex align-items-center justify-content-between"> 
@@ -49,6 +52,7 @@
             </div>
         </div>
     </section>
+    </div>
 
     <div class="container">
         <div class="row align-items-center justify-content-between">
@@ -97,8 +101,10 @@
                     <br><br>
                     You are a retard. I hate you. I hate the fact you exist. You are scum. You are an absolute fucking douchebag. You are a lowlife piece of human garbage. You absolute fucking retard cunt. You are a waste of a human being. You've done ABSOLUTELY NOTHING that's important. You dumb cunt, you piece of shit. You're not even a son of a bitch, that's too dignified a term for what you are. You know, you're not even human. You don't deserve the word human because you are that much of a fucking disgrace to people all around the globe, worldwide. It's a dishonor to put you in the same sentence with that word, you asshole. Are you fucking proud of yourself? Are you proud of having accomplished absolutely nothing in your life? You have only done bad things in this world. You do not deserve to live, you shit. You are a terrible excuse for a human being. You are an ABSOLUTE cunt. You are nothing but a faggot brainlet. You sleazy two-faced bastard. You slimy sluggish asshole. You TRIFLING motherfucker.
                     <br><br>
+                    Hi how are you?
                     Mother fucking cock sucking slut whore cunt with dick tow ball bitch sperm burping chicklen fucking cum guzzling dollar scank pedophile dog shit tasting rabbit fucking cross dressing homophobic sucubus shit licking corn picking shit sampler with dog shit breath cause you blew the dog that ass raped you while you were picking corn off of shit in the toilet to make corn fritters with,and eating it fresh out of the bowl.Thats just a mild one,they get way better..
                 </p>
+                <div> Hi how are you?</div>
             </div>
         </div>
     </div>
