--- a/Browser Extension/popup.html
+++ b/Browser Extension/popup.html
@@ -22,7 +22,14 @@
       </p>
       <button id="scrapeData">Check Safe</button>
     </div>
-    <table id="dataList"></table>
+
+    <!-- <center><div id="loader"></div></center> -->
+
+    <!-- <script>
+      function loadSpinner() {
+        document.getElementsById("tog").style.display = none;
+      }
+    </script> -->
     <script src="popup.js"></script>
     <!-- <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script> -->
     <script src="jquery-3.6.3.min.js"></script>
