--- a/Browser Extension/popup.html
+++ b/Browser Extension/popup.html
@@ -23,7 +23,7 @@
       <button id="scrapeData">Check Safe</button>
     </div>
 
-    <!-- <center><div id="loader"></div></center> -->
+    <center><div id="loader"></div></center>
 
     <!-- <script>
       function loadSpinner() {
