--- a/HTML Templates/finalTesting.html
+++ b/HTML Templates/finalTesting.html
@@ -130,13 +130,13 @@
                         &nbsp; ◉ drawings - safe for work drawings (including anime). <br> <br>
                         A shell-script has been created to download all the URLs provided in the repository to store the images in the local system separated by directories with the names of the label.
                     </p> 
-                    <!-- <a href="#" class="btn btn-light mt-3" data-bs-toggle="modal" data-bs-target="#image">
+                    <a href="#" class="btn btn-light mt-3" data-bs-toggle="modal" data-bs-target="#image">
                         <i class="bi bi-chevron-right"></i>
                         See Image
-                    </a> -->
+                    </a>
                 </div>
                 <div class="col-md">
-                    <!-- <img src="https://i.redd.it/iwvqfmebheo51.jpg" class="img-fluid" alt=""> -->
+                    <img src="https://www.shutterstock.com/image-photo/image-excited-happy-young-woman-260nw-1175823613.jpg" class="img-fluid" alt="">
                 </div>
             </div> 
         </div>
@@ -198,7 +198,7 @@
         </div>
     </div>
 
-    <!-- <div class="modal fade" id="image" tabindex="-1" aria-labelledby="imageLabel" aria-hidden="true">
+    <div class="modal fade" id="image" tabindex="-1" aria-labelledby="imageLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-scrollable">
           <div class="modal-content">
             <div class="modal-header">
@@ -214,7 +214,7 @@
             </div>
           </div>
         </div>
-    </div> -->
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 </body>
