--- a/HTML Templates/finalTesting.html
+++ b/HTML Templates/finalTesting.html
@@ -139,7 +139,7 @@
             </div> 
             <div class="row">
                 <div class="col-md">
-                    <img src="man.jpg" class="img-fluid" alt="" width="250px" >
+                    <img src="https://i.imgur.com/3AV2HpZ.jpeg" class="img-fluid" alt="" width="250px" >
                 </div>
                 <div class="col-md">
                     <img src="https://i.imgur.com/6nZbEdk.jpg" class="img-fluid" alt="" width="250px">
@@ -148,7 +148,7 @@
                     <img src="https://i.imgur.com/EvHWuQn.jpg" class="img-fluid" alt="" width="250px">
                 </div>
                 <div class="col-md">
-                    <img src="senior.jpg" class="img-fluid" alt="" width="250px">
+                    <img src="https://i.imgur.com/6Mla5WA.jpeg" class="img-fluid" alt="" width="250px">
                 </div>
             </div>
         </div>
@@ -219,7 +219,6 @@
             </div>
             <div class="modal-body">
                 <p class="lead">Sensitive image content</p>
-              <img src="https://i.redd.it/iwvqfmebheo51.jpg" alt="">
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
